# forge-ml

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  forge.db-shm  forge.db-wal
backend/: config.py  main.py  pyproject.toml  requirements.txt
backend/core/: auth.py  db.py  exceptions.py  schemas.py
backend/recipes/: dpo.py  lora_sft.py  rlhf.py
backend/routers/: datasets.py  evals.py  models.py  runs.py
backend/sdk/: __init__.py  client.py
backend/services/: cluster_service.py  dataset_service.py  eval_service.py  registry_service.py  training_service.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: DatasetList.jsx  EvalChart.jsx  Layout.jsx  MetricCard.jsx  RunsTable.jsx  Sidebar.jsx
frontend/src/pages/: Cluster.jsx  Dashboard.jsx  Datasets.jsx  Evals.jsx  Models.jsx  Pipeline.jsx  Runs.jsx  Settings.jsx
scripts/: seed_data.py
