[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-ml"
version = "0.1.0"
description = "LLM post-training platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ahmad Al-Nazer", email = "ahmad@forge-ml.dev"},
]

[project.urls]
Homepage = "https://github.com/ahmadghazinazer/forge-ml"
Repository = "https://github.com/ahmadghazinazer/forge-ml"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
